--- a/index.html
+++ b/index.html
@@ -3,11 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal Website</title>
 </head>
 <body>
-    <h1>Moin</h1>
-    <p>Lorem ipsum</p>
-    
+    <header>
+<h1>Jan Maaß</h1>
+<nav>
+    <ul>
+        <li><a href="#aboutme">About Me</a></li>
+        <li><a href="#skillset">Skillset</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+    </header>
+    <main>
+<article id="aboutme">
+    <h2>About Me</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure delectus rem placeat aut illum magnam nihil neque, quia totam, cupiditate quos molestias veritatis non. Voluptatum illo nesciunt tempore inventore sit.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur fugit corporis laboriosam nesciunt ipsa doloribus temporibus. Consequatur repellendus magni quae mollitia delectus cupiditate blanditiis aliquam assumenda, sint dolor saepe rerum!</p>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum modi necessitatibus omnis enim numquam libero neque, placeat exercitationem voluptatibus autem aperiam deleniti reprehenderit. Blanditiis, eius? Aperiam temporibus doloribus quas autem.</p>
+    <figure>
+        <img src="gitcommit.jpeg" alt="Commit Message">
+        <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates tempore error ipsum laudantium voluptas! Expedita molestias vel quo voluptate, repellendus harum perspiciatis consectetur eius, hic maxime tempora? Quae, perferendis illo.</figcaption>
+    </figure>
+</article>
+<section id="skillset">
+    <h2>Skillset</h2>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Git</li>
+        <li>Docker</li>
+        <li>Shell</li>
+        <li>MySQL</li>
+        <li>WordPress</li>
+        <li>MacOS</li>
+        <li>Linux</li>
+        <li>Photoshop</li>
+        <li>Illustrator</li>
+        <li>InDesign</li>
+        <li>Figma</li>
+        <li>AWS</li>
+        <li>Github</li>
+        <li>VS Code</li>
+        <li>Azure</li>
+    </ul>
+</section>
+    </main>
+    <footer>
+<section id="contact">
+    <nav>
+        <ul>
+        <li><a href="https://github.com/jantillidie">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/janmaass/">LinkedIn</a></li>
+        </ul>
+    </nav>
+</section>
+    </footer>
 </body>
 </html>
