Add some changes

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="top-navi">
 <h1>Jan Maaß</h1>
-<nav>
-    <ul>
+<nav class="navi">
+    <ul class="nav__list">
         <li><a href="#aboutme">About Me</a></li>
         <li><a href="#skillset">Skillset</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -53,6 +53,7 @@
     </main>
     <footer>
 <section id="contact">
+    <h2>Contact me</h2>
     <nav>
         <ul>
         <li><a href="https://github.com/jantillidie">GitHub</a></li>
